--- a/geolocator/pubspec.yaml
+++ b/geolocator/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
     sdk: flutter
 
   geolocator_platform_interface: ^4.2.3
-  geolocator_android: ^5.0.0
+  geolocator_android:
+    path: ../geolocator_android
   geolocator_apple: ^2.3.8
   geolocator_web: ^4.1.1
   geolocator_windows: ^0.2.3
